turn by turn basic

--- a/OnRoad/Info.plist
+++ b/OnRoad/Info.plist
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>MBXAccessToken</key>
+	<string>pk.eyJ1IjoiYWVsd2FydCIsImEiOiJjbDl5eTZmOWUwM2U3M3VtcWs5ejF1ZjZlIn0.Nv0uRAD24fWmEjyskKhYZw</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string></string>
+		<string>audio</string>
+	</array>
+</dict>
 </plist>
